...
            }
        },
    )
}

private fun EntryProviderScope<NavKey>.appEntries(onManagePasskeysClicked: (String) -> Unit) {
    entry<AppRoute.Onboarding> {
        OnboardingScreen()
    }
    entry<AppRoute.Authenticator> {
        AuthenticatorScreen(onManagePasskeysClicked = onManagePasskeysClicked)
    }
    entry<AppRoute.Vault> { VaultScreen() }
...
